[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/TitleScreen/MascotAnimals.png" type="Texture" id=1]
[ext_resource path="res://Assets/Environmental/Plants/Grass/GrassPlatform.png" type="Texture" id=2]
[ext_resource path="res://Fonts/DialogBoxFont-8pt.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/UI/TitleScreenButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/TitleScreen/TitleCard.png" type="Texture" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.815686, 1, 0.74902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 38.0
margin_right = 178.0
margin_bottom = 84.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -4.5
margin_right = 35.0
margin_bottom = 4.5
custom_colors/font_color = Color( 0.32549, 0.32549, 0.317647, 1 )
custom_fonts/font = ExtResource( 3 )
text = "FARNIMALS"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 73.0
margin_right = -96.0
margin_bottom = -24.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TextureRect"]
show_behind_parent = true
position = Vector2( 53, 56 )
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 149.0
margin_top = 81.0
margin_right = 221.0
margin_bottom = 129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NGButton" parent="Menu" instance=ExtResource( 4 )]
focus_neighbour_top = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
button_text = "New Game"

[node name="ContinueButton" parent="Menu" instance=ExtResource( 4 )]
margin_top = 13.0
margin_bottom = 22.0
button_text = "Continue"

[node name="OptionsButton" parent="Menu" instance=ExtResource( 4 )]
margin_top = 26.0
margin_bottom = 35.0
button_text = "Options"

[node name="QuitButton" parent="Menu" instance=ExtResource( 4 )]
margin_top = 39.0
margin_bottom = 48.0
focus_neighbour_bottom = NodePath("../NGButton")
focus_next = NodePath("../NGButton")
button_text = "Quit"

[node name="FadeIn" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Menu/NGButton" to="." method="_on_NGButton_pressed"]
[connection signal="pressed" from="Menu/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Menu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
